Corrigindo erro no swagger e adcionando tags
